<resources>
    <string name="app_name">Nutrir com aGente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="para_saber_mais">Saiba mais</string>
    <string name="sobre_o_aplicativo">Sobre o App</string>
    <string name="title_app">Nutrir com aGente</string>
    <string name="about_objective">Tem como objetivo, fornecer orientações dos principais condutas e diretrizes cabíveis ao ACS no que se refere a amamentação e alimentação complementar, além de:</string>
    <string name="about_bullet_empower_acs">• Empoderar os ACSS quanto aos conhecimentos;</string>
    <string name="about_bullet_expand_skills">• Ampliar suas habilidades e atitudes acerca das estratégias nutricionais junto às famílias dessas crianças;</string>
    <string name="about_bullet_contribute_indicators">• Contribuir a visualização dos indicadores para tomada de decisão.</string>
    <string name="about_tech_strategy">Dessa forma, ele age como uma estratégia tecnológica de educação profissional em saúde através da auto instrução de conteúdos qualificados, linguagem acessível e prática.</string>
    <string name="about_what_app_does_not_do_title"><![CDATA[É importante esclarecer que o aplicativo]]> <b>NÃO FAZ</b>:</string>
    <string name="about_app">É um aplicativo para orientação nutricional de crianças de 0 a 2 anos, e será utilizado pelos Agentes Comunitários de Saúde (ACS) durante as visitas de rotina às famílias com crianças nesta faixa etária.</string>
    <string name="about_bullet_productivity">• Produtividade do ACS;</string>
    <string name="about_bullet_georeferencing">• Georreferenciamento;</string>
    <string name="about_bullet_evaluation">• Avaliação ou qualificação profissional.</string>
    <string name="about_no_jobs_or_replacement">E por fim, <b>não</b> apresenta oportunidades de emprego e <b>não</b> substitui as consultas de puericultura ou nutricional.</string>
    <string name="about_what_app_does">Por outro lado, ele <b>traz</b> orientações sobre <b>aleitamento materno</b> e <b>alimentação complementar</b>, dá suporte ao <b>ACS</b> para lidar com as <b>crenças e mitos</b> da família relacionado com alimentação, apresenta <b>classificação de escores alimentares</b>, possibilita o registro das crianças, orienta os ACSs sobre o uso de ferro e vitamina A, possibilita o acompanhamento do <b>calendário de puericultura</b> e apresenta ainda, espaço para dicas de saúde.</string>
    <string name="dica_recusa_alimento">Se a criança recusar determinado alimento, procure oferecer novamente em outras refeições. Lembrar que são necessárias, em média, oito a dez exposições a um novo alimento para que ele seja aceito pela criança.</string>
    <string name="dica_nem_todo_choro_e_fome">É importante diferenciar os sinais de fome de outras situações de desconforto para a criança, como sede, sono, frio, calor ou fraldas sujas. Nem todo choro é fome!</string>
    <string name="alerta_evitar_industrializados">Deve-se <b>evitar</b> açúcar, café, enlatados, frituras, refrigerantes, balas, salgadinhos e outras guloseimas, nos primeiros anos de vida.</string>
    <string name="titulo_alimentos_a_evitar">Alimentos a evitar</string>
    <string name="dica_uso_moderado_sal"><b>Usar sal com moderação</b>. O sal iodado, além de fornecer o iodo, é importante para que a criança se adapte à alimentação da família, porém seu uso deve ser moderado e restrito àquele adicionado às papas salgadas.</string>
    <string name="alerta_mel_contraindicado">O mel é <b>totalmente contraindicado no primeiro ano de vida</b>, e são dois os principais motivos: contém os mesmos componentes do açúcar, o que já justifica evitá-lo. Além disso, há risco de contaminação por uma bactéria associada ao botulismo.</string>
    <string name="app_bar_title">Nutrir com aGente</string>
    <string name="main_title">Alimentos a evitar</string>
    <string name="paragraph_1">Vale ressaltar que a criança <b>não deve comer alimentos industrializados, enlatados, embutidos e frituras</b>, pois estes alimentos contêm sal em excesso, aditivos e conservantes artificiais.</string>
    <string name="ilustracao_bebe_chorando">Ilustração de um bebê chorando ao ser alimentado</string>
    <string name="precaucao_vira_o_rosto">Ela vira o rosto ou não quer mais abrir a boca, come mais devagar, fecha a boca e empurra o alimento, fica com a comida parada na boca sem engolir.</string>
    <string name="sinais_de_saciedade">Sinais de saciedade</string>
    <string name="dica_crianca_chora">A criança chora e se inclina para frente quando a colher está próxima, segura a mão da pessoa que está oferecendo a comida e abre a boca, pega ou aponta para a comida.</string>
    <string name="sinais_de_fome">Sinais de fome</string>
    <string name="fome_e_saciedade">Sinais de fome e de saciedade</string>
    <string name="vitamin_rich_foods_title">Alimentos ricos em Ferro e Vitaminas A e C</string>
    <string name="about_rich_foods"><p>Os alimentos são importantes fontes de ferro e vitaminas, inserí-los na dieta da criança ajudará no crescimento e desenvolvimento adequado.</p></string>
    <string name="iron_rich_foods">Alimentos ricos em Ferro</string>
    <string name="iron_rich_foods_list">
        <![CDATA[
        • Carnes de gado;\n
        • Aves como frango ou galinha;\n
        • Peixes;\n
        • Fígado.
        ]]>
    </string>
    <string name="vitamin_A_rich_foods">Alimentos ricos em Vitamina A</string>
    <string name="vitamin_A_rich_foods_list">
        <![CDATA[
        • Fígado, gema de ovo e leite de vaca;\n
        • Frutas e legumes amarelo-alaranjados como manga, pitanga, mamão, caqui, abóbora, cenoura e batata-doce;\n
        • Vegetais amarelos e vegetais folhosos verdes como espinafre, couve e brócolis;\n
        • Óleos e frutas oleaginosas como buriti, pupunha, dendê e pequi.
        ]]>
    </string>
    <string name="vitamin_C_rich_foods">Alimentos ricos em Vitamina C</string>
    <string name="vitamin_C_rich_foods_list">
        <![CDATA[
        • Laranja, limão e abacaxi;\n
        • Tomate, acerola, goiaba, kiwi e manga.
        ]]>
    </string>
    <string name="when_to_offer"><p>Os <b>alimentos ricos em vitamina C devem ser oferecidos junto à refeição principal</b> ou após a refeição para <b>aumentar a absorção do ferro</b>.</p></string>
        <string name="scheme_title">Esquema alimentar 6 meses</string>
        <string name="intro_text">Ao completar 6 meses, a criança deverá receber o seguinte esquema alimentar:</string>
        <string name="items_list">- Leite Materno (Demanda Livre);\n- papa de fruta (2x/dia);\n- papa salgada (1x/dia/ almoço).</string>
        <string name="img_desc">Imagem de comida</string>
        <string name="blue_card_title">Quantidade aproximada de alimento</string>
    <string name="blue_card_text"><b>Almoço:</b> De 2 a 3 colheres de sopa no total, mas não deve ser seguida de forma rígida, uma vez que as características individuais da criança devem ser respeitadas.</string>
        <string name="yellow_card_title">O consumo de suco natural deve ser limitado!</string>
        <string name="text7m">
            Os sucos <b>não devem ser utilizados como uma refeição ou lanche</b>, por conterem menor densidade energética que a fruta em pedaços e, se for oferecido, deve ser em pequena quantidade, após as refeições principais para ajudar a absorver melhor o ferro inorgânico.
        </string>
        <string name="cian_card_title">Conheça a diferença entre papa de fruta e a papa salgada!</string>
        <string name="cian_card_title7m">Consistência do alimento</string>
        <string name="papa_de_fruta">"•<b>Papa de fruta</b>: essa expressão tem como objetivo enfatizar a consistência com que deve ser oferecido esse alimento, ou seja, <b>amassado</b> ou <b>raspado</b>;"</string>
    <string name="papa_salgada">"•<b>Papa salgada</b>: essa expressão é utilizada para os pais na orientação da composição da dieta da criança e para <b>diferenciá-la das papas de frutas</b>, contudo <b>NÃO</b> quer dizer que essa deve conter sal e temperos, e sim, um alimento de cada grupo."</string>
        <string name="scheme_title_7_11">Esquema alimentar - 7 a 11 meses</string>
        <string name="intro_text_7_11">Ao completar 7 meses, a criança deverá receber o seguinte esquema alimentar:</string>
        <string name="items_list_7_11">- Leite Materno (Demanda Livre);\n- Lanche da manhã: fruta e leite materno;\n- Almoço e jantar:\n   - 1 alimento do grupo dos cereais ou raízes e tubérculos;\n   - 1 alimento do grupo dos feijões;\n   - 1 ou mais alimentos do grupo dos legumes e verduras;\n   - 1 alimento do grupo das carnes e ovos.</string>
        <string name="blue_card_text_7_11">7 a 8 meses\n\n <b>Almoço e jantar</b> : De <b> 3 a 4 </b> colheres de sopa no total.\n\n</string>
    <string name="blue_card_text_7_112"> 9 a 11 meses\n\n <b> Almoço e jantar</b>: De <b>4 a 5</b> colheres de sopa no total.\n\nMas não deve ser seguida de forma rígida, uma vez que as características individuais da criança devem ser respeitadas. </string>
        <string name="feeding_scheme_12m">Esquema Alimentar - 12 meses</string>
    <string name="feeding_intro_12m">
        Aos 12 meses, recomenda-se que a criança faça três refeições principais (café da manhã, almoço e jantar) e dois lanches (frutas ou cereais/tubérculos).
    </string>
    <string name="breakfast">
    • <b>Café da manhã</b>
    </string>
    <string name="breakfast_cont">
    - Fruta e leite materno ou cereal (pão caseiro ou processado, aveia, cuscuz de milho) e leite materno ou raízes e tubérculos (aipim/macaxeira, batata-doce).
    </string>
    <string name="lunch_and_dinner">
    • <b>Almoço e jantar</b>:
    </string>
    <string name="text6m">
    Os sucos <b>não devem ser utilizados como uma refeição ou lanche</b>, por conterem menor densidade energética que a fruta em pedaços, e se for oferecido, deve ser em pequena quantidade, após as refeições principais para ajudar a absorver melhor o ferro.
    </string>
    <string name="lunch_and_dinnercont">
    - 1 alimento do grupo dos cereais ou raízes e tubérculos;\n
    - 1 alimento do grupo dos feijões;\n
    - 1 ou mais alimentos do grupo dos legumes e verduras;\n
    - 1 alimento do grupo das carnes e ovos.
    </string>
    <string name="beforesleeping">
    • <b>Antes de dormir</b>:
    </string>
    <string name="beforesleepingcont">
    - Leite materno.
    </string>
    <string name="afternoon_snack">
    • <b>Lanche da tarde</b>:
    </string>
    <string name="almoçoejanta12">
        <b>Almoço e jantar</b>: De 5 a 6 colheres de sopa no total, mas não deve ser seguida de forma rígida, uma vez que as características individuais da criança devem ser respeitadas.
    </string>
    <string name="goldentext">
        É importante lembrar que as refeições, almoço e jantar, <b>não devem ser substituídas por refeições lácteas ou lanches</b>.
    </string>
    <string name="ciantext12">
        Nessa idade, a criança deve ser encorajada a <b>fazer a refeição junto com a família</b>, já que esse hábito vai dar <b>mais autonomia</b> e incentivá-la a consumir os mesmos alimentos que a família.
    </string>
    <string name="afternoon_snackcont">
    - Leite materno e fruta ou leite materno e cereal (pão caseiro, processado, aveia, cuscuz de milho) e raízes e tubérculos (aipim/macaxeira, batata-doce).
    <string/>

        
</string>
</resources>