<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <!-- Barra superior -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_toolbar"
        app:elevation="@dimen/appbar_elevation" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/LinearContainer">

            <androidx.cardview.widget.CardView style="@style/CardNutrir">

                <LinearLayout style="@style/CardContent">

                    <!-- Título -->
                    <TextView
                        style="@style/TextTitle"
                        android:text="@string/vitamin_rich_foods_title" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:text="@string/about_rich_foods" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_sm"
                        android:textStyle="bold"
                        android:text="@string/iron_rich_foods" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:textAlignment="center"
                        android:lineSpacingExtra="@dimen/line_spacing_lg"
                        android:text="@string/iron_rich_foods_list" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_sm"
                        android:textStyle="bold"
                        android:text="@string/vitamin_A_rich_foods" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:textAlignment="center"
                        android:lineSpacingExtra="@dimen/line_spacing_lg"
                        android:text="@string/vitamin_A_rich_foods_list" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:textStyle="bold"
                        android:text="@string/vitamin_C_rich_foods" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginBottom="@dimen/spacing_sm"
                        android:textAlignment="center"
                        android:lineSpacingExtra="@dimen/line_spacing_lg"
                        android:text="@string/vitamin_C_rich_foods_list" />

                    <TextView
                        style="@style/TextBody"
                        android:layout_marginTop="@dimen/spacing_lg"
                        android:padding="@dimen/padding_lg"
                        android:text="@string/when_to_offer" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>