<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_toolbar"
        app:elevation="@dimen/appbar_elevation" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/LinearContainer">

            <androidx.cardview.widget.CardView style="@style/CardNutrir">

                <LinearLayout style="@style/CardContent">

                    <TextView
                        style="@style/TextTitleLarge"
                        android:text="@string/fome_e_saciedade" />

                    <TextView
                        style="@style/TextSection"
                        android:text="@string/sinais_de_fome" />

                    <TextView
                        style="@style/TextBodyWrap"
                        android:layout_marginBottom="@dimen/spacing_xl"
                        android:text="@string/dica_crianca_chora" />

                    <TextView
                        style="@style/TextSection"
                        android:text="@string/sinais_de_saciedade" />

                    <TextView
                        style="@style/TextBodyWrap"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:text="@string/precaucao_vira_o_rosto" />

                    <ImageView
                        style="@style/ImageCenter"
                        android:layout_marginBottom="@dimen/spacing_xxl"
                        android:src="@drawable/bebe_chorando"
                        android:contentDescription="@string/ilustracao_bebe_chorando" />

                    <androidx.cardview.widget.CardView
                        style="@style/CalloutCard"
                        app:cardBackgroundColor="@color/warn_blue">

                        <TextView
                            style="@style/AlertTextBlue"
                            android:textStyle="bold"
                            android:text="@string/dica_recusa_alimento" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>