<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_toolbar"
        app:elevation="@dimen/appbar_elevation" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/LinearContainer">

            <androidx.cardview.widget.CardView style="@style/CardNutrir">

                <LinearLayout style="@style/CardContent">

                    <!-- Título -->
                    <TextView
                        android:id="@+id/title_feeding_scheme_12m"
                        style="@style/TextTitle"
                        android:text="@string/feeding_scheme_12m" />

                    <!-- Parágrafo introdutório -->
                    <TextView
                        android:id="@+id/intro_feeding_12m"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/feeding_intro_12m" />

                    <!-- Lista / itens (bullets) -->
                    <TextView
                        android:id="@+id/breakfast"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/breakfast" />

                    <TextView
                        android:id="@+id/breakfastconteudo"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/breakfast_cont" />

                    <TextView
                        android:id="@+id/mid_morning_snack"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/mid_morning_snack" />

                    <TextView
                        android:id="@+id/mid_morning_snackconteudo"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/mid_morning_snack_cont" />

                    <TextView
                        android:id="@+id/lunch_and_dinner"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/lunch_and_dinner" />

                    <TextView
                        android:id="@+id/lunch_and_dinnerconteudo"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/lunch_and_dinnercont" />

                    <TextView
                        android:id="@+id/afternoon_snack"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/afternoon_snack" />

                    <TextView
                        android:id="@+id/afternoon_snackconteudo"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/afternoon_snackcont" />

                    <TextView
                        android:id="@+id/beforesleeping"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/beforesleeping" />

                    <TextView
                        android:id="@+id/beforesleepingcont"
                        style="@style/TextBodySmall"
                        android:layout_marginBottom="@dimen/spacing_md"
                        android:text="@string/beforesleepingcont" />

                    <!-- Imagem centralizada -->
                    <ImageView
                        android:id="@+id/feeding_child_image"
                        style="@style/ImageCenter"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bebe_andando" />

                    <!-- Pink card -->
                    <LinearLayout style="@style/SchemeBoxPink">

                        <TextView
                            style="@style/SchemeTitle"
                            android:text="@string/blue_card_title" />

                        <TextView
                            style="@style/TextBodySmall"
                            android:text="@string/almoçoejanta12" />

                        <TextView
                            style="@style/SchemeTitle"
                            android:layout_marginTop="@dimen/spacing_xs"
                            android:text="Consistência" />

                        <TextView
                            style="@style/TextBodySmall"
                            android:text="Ofereça os alimenteos em pedaços maiores na mesma consistência da comida da família." />
                    </LinearLayout>

                    <!-- Gold card -->
                    <LinearLayout style="@style/SchemeBoxGold">

                        <TextView
                            style="@style/TextBodySmall"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/goldentext" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/fooding_child_image"
                        style="@style/ImageCenter"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bebe_com_fruta_inteira" />

                    <!-- Cyan card -->
                    <LinearLayout style="@style/SchemeBoxCyan">

                        <TextView
                            style="@style/TextBodySmall"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/ciantext12" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>